--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,30 @@
 [submodule "extras"]
 	path = extras
-	url = https://github.com/pibook/extras.git
+	url = https://github.com/giormaster/extras
 	branch = master
 [submodule "quotes"]
 	path = quotes
-	url = https://github.com/pibook/_quotes.git
+	url = https://github.com/giormaster/_quotes
 	branch = master
 [submodule "figures"]
 	path = figures
-	url = https://github.com/pibook/_gallery
+	url = https://github.com/giormaster/_gallery
 [submodule "images"]
 	path = images
-	url = https://github.com/pibook/images
+	url = https://github.com/giormaster/images
 [submodule "text"]
 	path = text
 	url = https://github.com/giormaster/text
 	branch = main
 [submodule "bibliography"]
 	path = bibliography
-	url = https://github.com/pibook/bibliography.git
+	url = https://github.com/giormaster/bibliography
+[submodule "_gallery"]
+	path = _gallery
+	url = https://github.com/giormaster/_gallery
+[submodule "_quotes"]
+	path = _quotes
+	url = https://github.com/giormaster/_quotes
+[submodule "_bibliography"]
+	path = _bibliography
+	url = https://github.com/giormaster/bibliography
